test/positive/LocalsWithSameName2.java
public class LocalsWithSameName2 {
    public LocalsWithSameName2() {
        for (int i = 0; i < 10; i=i+1) {}
        for (int i = 0; i < 10; i=i+1) {}
    }
}
