test/negative/LocalsWithSameName2.java
public class LocalsWithSameName2 {
    public LocalsWithSameName2() {
        int a = 0;
        int a = 1;
    }
}
